--- a/popup/popup.html
+++ b/popup/popup.html
@@ -51,7 +51,7 @@
         <div class="content has-text-centered">
           <p>
             <strong>Link Off</strong> by <a href="https://jelich.cc">Noah Jelich</a>. The source code is licensed
-            <a href="http://opensource.org/licenses/mit-license.php">MIT</a> and available on <a href="https://jelich.cc">my github</a>.
+            <a href="http://opensource.org/licenses/mit-license.php">MIT</a> and available on <a href="https://github.com/njelich/LinkOff">my github</a>.
             Add me on  <a href="https://www.linkedin.com/in/njelich/">LinkedIn</a> or
           </p>
           <a href='https://ko-fi.com/G2G547IJY' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://cdn.ko-fi.com/cdn/kofi2.png?v=2' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
