Added option to delete all messages

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -35,8 +35,7 @@
             <label for="ads-switch">Ad banners</label>
           </div>
           <div class="field">
-            <input id="news-switch" class="switch is-rounded" type="checkbox"/>
-            <label for="news-switch">News</label>
+            <button id="msg-button" class="button is-small is-fullwidth is-outlined is-rounded is-primary has-text-dark has-text-weight-semibold">Wipe all messages</button>
           </div>
         </div>
       </div>
