--- a/popup/popup.html
+++ b/popup/popup.html
@@ -18,15 +18,23 @@
 
   <div class="columns is-mobile">
     <div id="Home" class="column is-10 is-offset-1 content-tab">
+
       <div class="block">
         <h2 class="title is-2 has-text-centered">Link Off</h2>
         <p class="subtitle has-text-centered">by <a href="https://www.linkedin.com/in/njelich/">Noah Jelich</a>
         </p>
       </div>
 
-      <div class="block ">
-        <input id="master-switch" class="switch is-large" type="checkbox">
-        <label for="master-switch"></label>
+      <div class="container onoffswitch mb-5">
+        <input type="checkbox" class="onoffswitch-checkbox" id="main-toggle" tabindex="0" checked>
+        <label class="onoffswitch-label" for="main-toggle">
+            <span class="onoffswitch-inner"></span>
+            <span class="onoffswitch-switch"></span>
+        </label>
+      </div>
+
+      <div class="content has-text-centered">
+        <a href="https://github.com/njelich/LinkOff"><b>TUTORIAL</b></a>
       </div>
 
       <div class="content has-text-centered">
@@ -42,193 +50,167 @@
 
 
 
-  <div class="columns is-mobile">
-    <div id="Feed" class="column is-10 is-offset-1 content-tab">
-
-
-      <div class="field">
-        <input id="master-switch" class="switch is-large" type="checkbox">
-        <label for="master-switch">Toggle extension</label>
-      </div>
-      <div class="columns is-mobile">
-        <div class="column is-half">
-          <div class="field">
-            <input id="feed-switch" class="switch is-rounded" type="checkbox" />
-            <label for="feed-switch">Whole feed</label>
-          </div>
-          <div class="field">
-            <input id="learning-switch" class="switch is-rounded" type="checkbox" />
-            <label for="learning-switch">Learning</label>
-          </div>
-        </div>
-        <div class="column is-half">
-          <div class="field">
-            <input id="ads-switch" class="switch is-rounded" type="checkbox" />
-            <label for="ads-switch">Ad banners</label>
-          </div>
-          <div class="field">
-            <button id="msg-button" class="button is-small is-fullwidth is-outlined is-rounded is-primary has-text-dark has-text-weight-semibold">Wipe
-                            all messages</button>
-          </div>
-        </div>
-      </div>
-      <div class="field">
-        <input id='keyword-selector' placeholder='Add keywords' class='tagify--outside'>
-      </div>
-      <footer class="footer">
-        <div class="content has-text-centered">
-          <p>
-            <strong>Link Off</strong> by <a href="https://jelich.cc">Noah Jelich</a>. The source code is licensed
-            <a href="http://opensource.org/licenses/mit-license.php">MIT</a> and available on <a href="https://github.com/njelich/LinkOff">my github</a>. Add me on <a href="https://www.linkedin.com/in/njelich/">LinkedIn</a> or
-          </p>
-          <a href='https://ko-fi.com/G2G547IJY' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://cdn.ko-fi.com/cdn/kofi2.png?v=2' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
-        </div>
-      </footer>
+  <div id="Feed" class="px-4 pb-6 content-tab">
+    <div class="field">
+      <input id="hide-whole-feed" class="switch" type="checkbox">
+      <label for="hide-whole-feed">Hide the whole feed</label>
     </div>
+
+    <div class="field">
+      <input id="sort-by-recent" class="switch" type="checkbox">
+      <label for="sort-by-recent">Sort posts by recent</label>
+    </div>
+
+    <div class="divider">Hide posts by content</div>
+
+    <div class="columns is-mobile">
+      <div class="column is-half">
+        <div class="field">
+          <input id="hide-polls" class="switch is-rounded" type="checkbox" />
+          <label for="hide-polls">Hide polls</label>
+        </div>
+        <div class="field">
+          <input id="hide-videos" class="switch is-rounded" type="checkbox" />
+          <label for="hide-videos">Hide videos</label>
+        </div>
+        <div class="field">
+          <input id="hide-links" class="switch is-rounded" type="checkbox" />
+          <label for="hide-links">Hide links</label>
+        </div>
+      </div>
+      <div class="column is-half">
+        <div class="field">
+          <input id="hide-images" class="switch is-rounded" type="checkbox" />
+          <label for="hide-images">Hide images</label>
+        </div>
+        <div class="field">
+          <input id="hide-promoted" class="switch is-rounded" type="checkbox" />
+          <label for="hide-promoted">Hide promoted</label>
+        </div>
+        <div class="field">
+          <input id="hide-shared" class="switch is-rounded" type="checkbox" />
+          <label for="hide-shared">Hide shared</label>
+        </div>
+      </div>
+    </div>
+
+    <div class="divider">Hide posts by author</div>
+
+    <div class="columns is-mobile">
+      <div class="column is-half">
+        <div class="field">
+          <input id="hide-by-people" class="switch is-rounded" type="checkbox" />
+          <label for="hide-by-people">By people</label>
+        </div>
+      </div>
+      <div class="column is-half">
+        <div class="field">
+          <input id="hide-by-companies" class="switch is-rounded" type="checkbox" />
+          <label for="hide-by-companies">By companies</label>
+        </div>
+      </div>
+    </div>
+
+    <div class="divider">Hide by keywords</div>
+
+    <div class="field">
+      <input id='keyword-selector' placeholder='Add keywords' class='tagify--outside'>
+    </div>
+
+    <div class="divider">Hide post by interactions</div>
+
+    <div class="field">
+      <input id="hide-with-reactions" class="switch is-rounded" type="checkbox" />
+      <label for="hide-with-reactions">Hide reacted on by connections</label>
+    </div>
+
+    <div class="field">
+      <input id="hide-commented-on" class="switch is-rounded" type="checkbox" />
+      <label for="hide-commented-on">Hide commented on by connections</label>
+    </div>
+
+    <div class="field">
+      <input id="hide-followed" class="switch is-rounded" type="checkbox" />
+      <label for="hide-followed">Hide followed by connections</label>
+    </div>
+
+    <div class="divider">Other</div>
+
+    <p class="is-pulled-left level-item">Hide posts older than</p>
+    <div class="is-pulled-right select is-small">
+      <select id="hide-by-age">
+          <option value="disabled">Disabled</option>
+          <option value="hour">an hour</option>
+          <option value="day">a day</option>
+          <option value="week">a week</option>
+          <option value="month">a month</option>
+        </select>
+    </div>
+
   </div>
 
+  <div id="Messages" class="px-4 pb-4 content-tab">
 
-  <div class="columns is-mobile">
-    <div id="Messages" class="column is-10 is-offset-1 content-tab">
-
-      <div class="block">
-        <h2 class="title is-2 has-text-centered">Link Off</h2>
-        <p class="subtitle has-text-centered">by <a href="https://www.linkedin.com/in/njelich/">Noah Jelich</a>
-        </p>
-      </div>
-      <div class="field">
-        <input id="master-switch" class="switch is-large" type="checkbox">
-        <label for="master-switch">Toggle extension</label>
-      </div>
-      <div class="columns is-mobile">
-        <div class="column is-half">
-          <div class="field">
-            <input id="feed-switch" class="switch is-rounded" type="checkbox" />
-            <label for="feed-switch">Whole feed</label>
-          </div>
-          <div class="field">
-            <input id="learning-switch" class="switch is-rounded" type="checkbox" />
-            <label for="learning-switch">Learning</label>
-          </div>
-        </div>
-        <div class="column is-half">
-          <div class="field">
-            <input id="ads-switch" class="switch is-rounded" type="checkbox" />
-            <label for="ads-switch">Ad banners</label>
-          </div>
-          <div class="field">
-            <button id="msg-button" class="button is-small is-fullwidth is-outlined is-rounded is-primary has-text-dark has-text-weight-semibold">Wipe
-                                all messages</button>
-          </div>
-        </div>
-      </div>
-      <div class="field">
-        <input id='keyword-selector' placeholder='Add keywords' class='tagify--outside'>
-      </div>
-      <footer class="footer">
-        <div class="content has-text-centered">
-          <p>
-            <strong>Link Off</strong> by <a href="https://jelich.cc">Noah Jelich</a>. The source code is licensed
-            <a href="http://opensource.org/licenses/mit-license.php">MIT</a> and available on <a href="https://github.com/njelich/LinkOff">my github</a>. Add me on <a href="https://www.linkedin.com/in/njelich/">LinkedIn</a> or
-          </p>
-          <a href='https://ko-fi.com/G2G547IJY' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://cdn.ko-fi.com/cdn/kofi2.png?v=2' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
-        </div>
-      </footer>
+    <div class="field">
+      <button id="msg-button" class="button is-small is-fullwidth is-outlined is-rounded is-primary has-text-dark has-text-weight-semibold">Wipe all messages</button>
     </div>
+
+    <div class="block">
+      <h2 class="title is-2 has-text-centered">WORK IN PROGRESS</h2>
+    </div>
+
   </div>
 
+  <div id="Jobs" class="px-4 pb-4 content-tab">
 
-  <div class="columns is-mobile">
-    <div id="Jobs" class="column is-10 is-offset-1 content-tab">
-
-      <div class="block">
-        <h2 class="title is-2 has-text-centered">Link Off</h2>
-        <p class="subtitle has-text-centered">by <a href="https://www.linkedin.com/in/njelich/">Noah Jelich</a>
-        </p>
-      </div>
-      <div class="field">
-        <input id="master-switch" class="switch is-large" type="checkbox">
-        <label for="master-switch">Toggle extension</label>
-      </div>
-      <div class="columns is-mobile">
-        <div class="column is-half">
-          <div class="field">
-            <input id="feed-switch" class="switch is-rounded" type="checkbox" />
-            <label for="feed-switch">Whole feed</label>
-          </div>
-          <div class="field">
-            <input id="learning-switch" class="switch is-rounded" type="checkbox" />
-            <label for="learning-switch">Learning</label>
-          </div>
-        </div>
-        <div class="column is-half">
-          <div class="field">
-            <input id="ads-switch" class="switch is-rounded" type="checkbox" />
-            <label for="ads-switch">Ad banners</label>
-          </div>
-          <div class="field">
-            <button id="msg-button" class="button is-small is-fullwidth is-outlined is-rounded is-primary has-text-dark has-text-weight-semibold">Wipe
-                                    all messages</button>
-          </div>
-        </div>
-      </div>
-      <div class="field">
-        <input id='keyword-selector' placeholder='Add keywords' class='tagify--outside'>
-      </div>
-
+    <div class="block">
+      <h2 class="title is-2 has-text-centered">WORK IN PROGRESS</h2>
     </div>
+
   </div>
 
+  <div id="Misc" class="px-4 pb-4 content-tab">
 
-  <div class="columns is-mobile">
-    <div id="Misc" class="column is-10 is-offset-1 content-tab">
-
-      <div class="block">
-        <h2 class="title is-2 has-text-centered">Link Off</h2>
-        <p class="subtitle has-text-centered">by <a href="https://www.linkedin.com/in/njelich/">Noah Jelich</a>
-        </p>
-      </div>
-      <div class="field">
-        <input id="master-switch" class="switch is-large" type="checkbox">
-        <label for="master-switch">Toggle extension</label>
-      </div>
-      <div class="columns is-mobile">
-        <div class="column is-half">
-          <div class="field">
-            <input id="feed-switch" class="switch is-rounded" type="checkbox" />
-            <label for="feed-switch">Whole feed</label>
-          </div>
-          <div class="field">
-            <input id="learning-switch" class="switch is-rounded" type="checkbox" />
-            <label for="learning-switch">Learning</label>
-          </div>
-        </div>
-        <div class="column is-half">
-          <div class="field">
-            <input id="ads-switch" class="switch is-rounded" type="checkbox" />
-            <label for="ads-switch">Ad banners</label>
-          </div>
-          <div class="field">
-            <button id="msg-button" class="button is-small is-fullwidth is-outlined is-rounded is-primary has-text-dark has-text-weight-semibold">Wipe
-                                        all messages</button>
-          </div>
-        </div>
-      </div>
-      <div class="field">
-        <input id='keyword-selector' placeholder='Add keywords' class='tagify--outside'>
-      </div>
-      <footer class="footer">
-        <div class="content has-text-centered">
-          <p>
-            <strong>Link Off</strong> by <a href="https://jelich.cc">Noah Jelich</a>. The source code is licensed
-            <a href="http://opensource.org/licenses/mit-license.php">MIT</a> and available on <a href="https://github.com/njelich/LinkOff">my github</a>. Add me on <a href="https://www.linkedin.com/in/njelich/">LinkedIn</a> or
-          </p>
-          <a href='https://ko-fi.com/G2G547IJY' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://cdn.ko-fi.com/cdn/kofi2.png?v=2' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
-        </div>
-      </footer>
+    <div class="field">
+      <input id="hide-linkedin-learning" class="switch" type="checkbox">
+      <label for="hide-linkedin-learning">Hide LinkedIn learning courses</label>
     </div>
-  </div>
 
+    <div class="field">
+      <input id="hide-advertisements" class="switch" type="checkbox">
+      <label for="hide-advertisements">Hide all advertisements</label>
+    </div>
+
+    <div class="field">
+      <input id="hide-follow-recommendations" class="switch" type="checkbox">
+      <label for="hide-follow-recommendations">Hide follow recommendations</label>
+    </div>
+
+    <div class="field">
+      <input id="hide-groups-events-hashtags" class="switch" type="checkbox">
+      <label for="hide-groups-events-hashtags">Hide groups, events and hashtags</label>
+    </div>
+
+    <div class="field">
+      <input id="hide-account-building" class="switch" type="checkbox">
+      <label for="hide-account-building">Hide account building prompts</label>
+    </div>
+
+    <div class="field">
+      <input id="hide-premium" class="switch" type="checkbox">
+      <label for="hide-premium">Hide LinkedIn premium prompts</label>
+    </div>
+
+    <div class="field">
+      <input id="hide-notifications" class="switch" type="checkbox">
+      <label for="hide-notifications">Hide notifications tab</label>
+    </div>
+
+    <div class="block pt-4">
+      <h2 class="title is-2 has-text-centered">WORK IN PROGRESS</h2>
+    </div>
+
+  </div>
 
   <link href="../lib/tagify.css" rel="stylesheet" type="text/css">
   <script language="javascript" src="../lib/tagify.min.js"></script>
