Actions listener, defaults on install, styling updates (90%)

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -110,7 +110,7 @@
     <div class="divider">Hide by keywords</div>
 
     <div class="field">
-      <input id='keyword-selector' placeholder='Add keywords' class='tagify--outside'>
+      <input id='hide-by-keywords' placeholder='Add keywords' class='tagify--outside'>
     </div>
 
     <div class="divider">Hide post by interactions</div>
@@ -148,11 +148,12 @@
   <div id="Messages" class="px-4 pb-4 content-tab">
 
     <div class="field">
-      <button id="msg-button" class="button is-small is-fullwidth is-outlined is-rounded is-primary has-text-dark has-text-weight-semibold">Wipe all messages</button>
+      <button id="select-messages-for-deletion" class="button is-large is-primary is-fullwidth is-rounded">Select messages for deletion</button>
     </div>
 
     <div class="block">
       <h2 class="title is-2 has-text-centered">WORK IN PROGRESS</h2>
+      <p class="has-text-centered">I'm working hard on writing the new features in this category. If you'd like to help, please make a feature request on <a href="https://github.com/njelich/LinkOff">github</a> or share the extension with your colleagues.</p>
     </div>
 
   </div>
@@ -160,7 +161,8 @@
   <div id="Jobs" class="px-4 pb-4 content-tab">
 
     <div class="block">
-      <h2 class="title is-2 has-text-centered">WORK IN PROGRESS</h2>
+      <h2 class="title is-2 has-text-centered">COMING SOON</h2>
+      <p class="has-text-centered">I'm working hard on writing the new features in this category. If you'd like to help, please make a feature request on <a href="https://github.com/njelich/LinkOff">github</a> or share the extension with your colleagues.</p>
     </div>
 
   </div>
@@ -204,6 +206,7 @@
 
     <div class="block pt-4">
       <h2 class="title is-2 has-text-centered">WORK IN PROGRESS</h2>
+      <p class="has-text-centered">I'm working hard on writing the new features in this category. If you'd like to help, please make a feature request on <a href="https://github.com/njelich/LinkOff">github</a> or share the extension with your colleagues.</p>
     </div>
 
   </div>
