Misc panel basic functionality

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -185,8 +185,8 @@
     </div>
 
     <div class="field">
-      <input id="hide-groups-events-hashtags" class="switch" type="checkbox">
-      <label for="hide-groups-events-hashtags">Hide groups, events and hashtags</label>
+      <input id="hide-community-panel" class="switch" type="checkbox">
+      <label for="hide-community-panel">Hide community panel</label>
     </div>
 
     <div class="field">
@@ -197,11 +197,6 @@
     <div class="field">
       <input id="hide-premium" class="switch" type="checkbox">
       <label for="hide-premium">Hide LinkedIn premium prompts</label>
-    </div>
-
-    <div class="field">
-      <input id="hide-notifications" class="switch" type="checkbox">
-      <label for="hide-notifications">Hide notifications tab</label>
     </div>
 
     <div class="block pt-4">
