Fixed blunder with settings

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -116,8 +116,13 @@
     <div class="divider">Hide post by interactions</div>
 
     <div class="field">
-      <input id="hide-with-reactions" class="switch is-rounded" type="checkbox" />
-      <label for="hide-with-reactions">Hide reacted on by connections</label>
+      <input id="hide-liked" class="switch is-rounded" type="checkbox" />
+      <label for="hide-liked">Hide liked by connections</label>
+    </div>
+
+    <div class="field">
+      <input id="hide-other-reactions" class="switch is-rounded" type="checkbox" />
+      <label for="hide-other-reactions">Hide with other reactions on by connections</label>
     </div>
 
     <div class="field">
