Started work on account switching

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -174,6 +174,18 @@
 
   <div id="Misc" class="px-4 pb-4 content-tab">
 
+    <div class="is-clearfix">
+      <p class="is-pulled-left level-item">Switch user accounts</p>
+      <div class="is-pulled-right select is-small">
+        <select id="switch-account">
+            <option value="code1">User1</option>
+            <option value="code2">User2</option>
+          </select>
+      </div>
+    </div>
+
+    <div class="divider">Other hideables</div>
+
     <div class="field">
       <input id="hide-linkedin-learning" class="switch" type="checkbox">
       <label for="hide-linkedin-learning">Hide LinkedIn learning courses</label>
