Added gentle mode (dims elements instead of hiding)

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -33,6 +33,11 @@
         </label>
       </div>
 
+      <div class="field has-text-centered">
+        <input id="gentle-mode" class="switch is-rounded" type="checkbox">
+        <label for="gentle-mode">Gentle mode (dim)</label>
+      </div>
+
       <div class="content has-text-centered">
         <p>
           <strong>Link Off - LinkedIn Filter and Customizer</strong> by <a href="https://jelich.cc">Noah Jelich</a>. The source code is licensed
