Fixed cookie fetching bug, defunct user switcher, dark mode

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -183,8 +183,7 @@
       <p class="is-pulled-left level-item">Switch user accounts</p>
       <div class="is-pulled-right select is-small">
         <select id="switch-account">
-            <option value="code1">User1</option>
-            <option value="code2">User2</option>
+            <option value="AQEDATXo0x8FUomsAAABeYOogbwAAAF5p7UFvFYAriiqvXd6LTKEqOrt0idwcJxs0PWmawl7QZu9hoI-fIKH_92Es_M9MaeT0TVPO08g1WpyR0FUZepEDd_CHGrYuQYH23ZV1pJ4S8jRCZ-o51NeJ_aX">LIn Member</option>
           </select>
       </div>
     </div>
