Added darkmode, WIP tag on gentle-mode

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -38,6 +38,11 @@
         <label for="gentle-mode">Gentle mode (dim)</label>
       </div>
 
+      <div class="field has-text-centered">
+        <input id="dark-mode" class="switch is-rounded" type="checkbox">
+        <label for="dark-mode">Use dark mode (saves eyes)</label>
+      </div>
+
       <div class="content has-text-centered">
         <p>
           <strong>Link Off - LinkedIn Filter and Customizer</strong> by <a href="https://jelich.cc">Noah Jelich</a>. The source code is licensed
@@ -127,7 +132,7 @@
 
     <div class="field">
       <input id="hide-other-reactions" class="switch is-rounded" type="checkbox" />
-      <label for="hide-other-reactions">Hide with other reactions on by connections</label>
+      <label for="hide-other-reactions">Hide with other reactions</label>
     </div>
 
     <div class="field">
@@ -180,7 +185,7 @@
   <div id="Misc" class="px-4 pb-4 content-tab">
 
     <div class="is-clearfix">
-      <p class="is-pulled-left level-item">Switch user accounts</p>
+      <p class="is-pulled-left level-item">Switch user accounts (WIP)</p>
       <div class="is-pulled-right select is-small">
         <select id="switch-account">
             <option value="AQEDATXo0x8FUomsAAABeYOogbwAAAF5p7UFvFYAriiqvXd6LTKEqOrt0idwcJxs0PWmawl7QZu9hoI-fIKH_92Es_M9MaeT0TVPO08g1WpyR0FUZepEDd_CHGrYuQYH23ZV1pJ4S8jRCZ-o51NeJ_aX">LIn Member</option>
