added wide mode, debugging features and improved post blocking

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -44,6 +44,11 @@
       </div>
 
       <div class="field has-text-centered">
+        <input id="wide-mode" class="switch is-rounded" type="checkbox" />
+        <label for="wide-mode">Wide mode (wider UI)</label>
+      </div>
+
+      <div class="field has-text-centered">
         <input id="dark-mode" class="switch is-rounded" type="checkbox" />
         <label for="dark-mode">Use dark mode (saves eyes)</label>
       </div>
