--- a/popup/popup.html
+++ b/popup/popup.html
@@ -50,7 +50,7 @@
 
       <div class="field has-text-centered">
         <input id="dark-mode" class="switch is-rounded" type="checkbox" />
-        <label for="dark-mode">Use dark mode (saves eyes)</label>
+        <label for="dark-mode">Dark mode (saves eyes)</label>
       </div>
 
       <div class="content has-text-centered">
