wip unfollow all #25

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -209,6 +209,17 @@
       >
     </div>
 
+    <div class="divider">Actions</div>
+
+    <div class="field">
+      <button
+        id="unfollow-all"
+        class="button is-primary is-outlined is-fullwidth is-rounded"
+      >
+        Unfollow All (takes you to the page)
+      </button>
+    </div>
+
     <div class="divider">Other hideables</div>
 
     <div class="field">
