add hide by keyword for Suggested

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -152,6 +152,11 @@
     <div class="divider">Hide post by interactions</div>
 
     <div class="field">
+      <input id="hide-suggested" class="switch is-rounded" type="checkbox" />
+      <label for="hide-suggested">Hide suggestions</label>
+    </div>
+
+    <div class="field">
       <input id="hide-liked" class="switch is-rounded" type="checkbox" />
       <label for="hide-liked">Hide liked by connections</label>
     </div>
