feat(Jobs): Add job guidance and AI button toggle

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -203,14 +203,14 @@
   </div>
 
   <div id="Jobs" class="px-4 pb-4 content-tab">
-    <div class="block">
-      <h2 class="title is-2 has-text-centered">COMING SOON</h2>
-      <p class="has-text-centered">
-        I'm working hard on writing the new features in this category. If you'd
-        like to help, please make a feature request on
-        <a href="https://github.com/njelich/LinkOff">github</a> or share the
-        extension with your colleagues.
-      </p>
+    <div class="field">
+      <input id="hide-job-guidance" class="switch" type="checkbox" />
+      <label for="hide-job-guidance">Hide job guidance</label>
+    </div>
+
+    <div class="field">
+      <input id="hide-ai-button" class="switch" type="checkbox" />
+      <label for="hide-ai-button">Hide AI button</label>
     </div>
   </div>
 
