feat(Jobs): :sparkles: Add job filtering
Add job filtering from a keyword list

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -212,6 +212,16 @@
       <input id="hide-ai-button" class="switch" type="checkbox" />
       <label for="hide-ai-button">Hide AI button</label>
     </div>
+
+    <div class="divider">Hide jobs by keywords</div>
+
+    <div class="field">
+      <input
+        id="hide-by-job-keywords"
+        placeholder="Add keywords"
+        class="tagify--outside"
+      />
+    </div>
   </div>
 
   <div id="Misc" class="px-4 pb-4 content-tab">
