feat(Carousels): :sparkles: Add hide carousel feature

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -104,6 +104,14 @@
           <label for="hide-images">Hide images</label>
         </div>
         <div class="field">
+          <input
+            id="hide-carousels"
+            class="switch is-rounded"
+            type="checkbox"
+          />
+          <label for="hide-carousels">Hide carousels</label>
+        </div>
+        <div class="field">
           <input id="hide-promoted" class="switch is-rounded" type="checkbox" />
           <label for="hide-promoted">Hide promoted</label>
         </div>
