feat(Notifications): :sparkles: Hide notification count feature

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -239,9 +239,14 @@
 
     <div class="field">
       <input id="hide-follow-recommendations" class="switch" type="checkbox" />
-      <label for="hide-follow-recommendations"
-        >Hide follow recommendations</label
-      >
+      <label for="hide-follow-recommendations">
+        Hide follow recommendations
+      </label>
+    </div>
+
+    <div class="field">
+      <input id="hide-notification-count" class="switch" type="checkbox" />
+      <label for="hide-notification-count"> Hide notification count </label>
     </div>
 
     <div class="field">
