--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -198,6 +198,7 @@
         <option value="day">a day</option>
         <option value="week">a week</option>
         <option value="month">a month</option>
+        <option value="year">a year</option>
       </select>
     </div>
   </div>
@@ -211,6 +212,11 @@
     <div class="field">
       <input id="hide-ai-button" class="switch" type="checkbox" />
       <label for="hide-ai-button">Hide AI button</label>
+    </div>
+
+    <div class="field">
+      <input id="hide-promoted-jobs" class="switch" type="checkbox" />
+      <label for="hide-promoted-jobs">Hide promoted</label>
     </div>
 
     <div class="divider">Hide jobs by keywords</div>
@@ -305,5 +311,5 @@
 
   <link href="../lib/tagify.css" rel="stylesheet" type="text/css" />
   <script language="javascript" src="../lib/tagify.min.js"></script>
-  <script language="javascript" src="popup.js"></script>
+  <script language="javascript" src="popup.js" type="module"></script>
 </body>
