feat(Gentle mode): :sparkles: Use a tooltip to explain gentle mode more clearly

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -40,7 +40,19 @@
 
       <div class="field has-text-centered">
         <input id="gentle-mode" class="switch is-rounded" type="checkbox" />
-        <label for="gentle-mode">Gentle mode (dim)</label>
+        <label for="gentle-mode">
+          <span class="is-inline-flex is-align-items-center">
+            Gentle mode
+
+            <!-- Info tooltip -->
+            <span
+              class="has-tooltip-arrow has-tooltip-multiline icon ml-1"
+              data-tooltip="Fading blocked elements instead&#10;of removing them"
+            >
+              <img src="../icons/info.svg" class="icon" />
+            </span>
+          </span>
+        </label>
       </div>
 
       <div class="field has-text-centered">
