feat(Misc): :sparkles: Add profile counter hiding

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -25,13 +25,7 @@
       </div>
 
       <div class="container onoffswitch mb-5">
-        <input
-          type="checkbox"
-          class="onoffswitch-checkbox"
-          id="main-toggle"
-          tabindex="0"
-          checked
-        />
+        <input type="checkbox" class="onoffswitch-checkbox" id="main-toggle" tabindex="0" checked />
         <label class="onoffswitch-label" for="main-toggle">
           <span class="onoffswitch-inner"></span>
           <span class="onoffswitch-switch"></span>
@@ -45,10 +39,8 @@
             Gentle mode
 
             <!-- Info tooltip -->
-            <span
-              class="has-tooltip-arrow has-tooltip-multiline icon ml-1"
-              data-tooltip="Fading blocked elements instead&#10;of removing them"
-            >
+            <span class="has-tooltip-arrow has-tooltip-multiline icon ml-1"
+              data-tooltip="Fading blocked elements instead&#10;of removing them">
               <img src="../icons/info.svg" class="icon" />
             </span>
           </span>
@@ -75,8 +67,7 @@
           <a href="https://github.com/njelich/LinkOff">my github</a>. Add me on
           <a href="https://www.linkedin.com/in/njelich/">LinkedIn</a> or
           <a href="https://ko-fi.com/G2G547IJY" target="_blank">
-            Buy me a Coffee</a
-          >
+            Buy me a Coffee</a>
         </p>
       </div>
     </div>
@@ -116,11 +107,7 @@
           <label for="hide-images">Hide images</label>
         </div>
         <div class="field">
-          <input
-            id="hide-carousels"
-            class="switch is-rounded"
-            type="checkbox"
-          />
+          <input id="hide-carousels" class="switch is-rounded" type="checkbox" />
           <label for="hide-carousels">Hide carousels</label>
         </div>
         <div class="field">
@@ -139,21 +126,13 @@
     <div class="columns is-mobile">
       <div class="column is-half">
         <div class="field">
-          <input
-            id="hide-by-people"
-            class="switch is-rounded"
-            type="checkbox"
-          />
+          <input id="hide-by-people" class="switch is-rounded" type="checkbox" />
           <label for="hide-by-people">By people</label>
         </div>
       </div>
       <div class="column is-half">
         <div class="field">
-          <input
-            id="hide-by-companies"
-            class="switch is-rounded"
-            type="checkbox"
-          />
+          <input id="hide-by-companies" class="switch is-rounded" type="checkbox" />
           <label for="hide-by-companies">By companies</label>
         </div>
       </div>
@@ -162,11 +141,7 @@
     <div class="divider">Hide by keywords</div>
 
     <div class="field">
-      <input
-        id="hide-by-keywords"
-        placeholder="Add keywords"
-        class="tagify--outside"
-      />
+      <input id="hide-by-keywords" placeholder="Add keywords" class="tagify--outside" />
     </div>
 
     <div class="divider">Hide post by interactions</div>
@@ -182,11 +157,7 @@
     </div>
 
     <div class="field">
-      <input
-        id="hide-other-reactions"
-        class="switch is-rounded"
-        type="checkbox"
-      />
+      <input id="hide-other-reactions" class="switch is-rounded" type="checkbox" />
       <label for="hide-other-reactions">Hide with other reactions</label>
     </div>
 
@@ -234,29 +205,20 @@
     <div class="divider">Hide jobs by keywords</div>
 
     <div class="field">
-      <input
-        id="hide-by-job-keywords"
-        placeholder="Add keywords"
-        class="tagify--outside"
-      />
+      <input id="hide-by-job-keywords" placeholder="Add keywords" class="tagify--outside" />
     </div>
   </div>
 
   <div id="Misc" class="px-4 pb-4 content-tab">
     <div class="field">
       <input id="disable-postcount-prompt" class="switch" type="checkbox" />
-      <label for="disable-postcount-prompt"
-        >Disable post count prompt for feed</label
-      >
+      <label for="disable-postcount-prompt">Disable post count prompt for feed</label>
     </div>
 
     <div class="divider">Actions</div>
 
     <div class="field">
-      <button
-        id="unfollow-all"
-        class="button is-primary is-outlined is-fullwidth is-rounded"
-      >
+      <button id="unfollow-all" class="button is-primary is-outlined is-fullwidth is-rounded">
         Unfollow All
       </button>
     </div>
@@ -283,6 +245,11 @@
     <div class="field">
       <input id="hide-notification-count" class="switch" type="checkbox" />
       <label for="hide-notification-count"> Hide notification count </label>
+    </div>
+
+    <div class="field">
+      <input id="hide-profile-counters" class="switch" type="checkbox" />
+      <label for="hide-profile-counters">Hide profile counters</label>
     </div>
 
     <div class="field">
